# partitioner

./: .gitignore
parallel/: CMakeCache.txt  CMakeLists.txt  Makefile  auto.sh  cmake_install.cmake  graph.c  graph.h  initpart.c  initpart.h  main.c  multilevel.c  multilevel.h  piece.dual  refine.c  refine.h  test.sh  utils.c  utils.h
serial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  coarsen.c  coarsen.h  graph.c  graph.h  main.c  massif.out.26422  multilevel.c  multilevel.h  refine.c  refine.h  serial
visualization/: Readme.rtf  msh2metis & visulization 3D.ipynb  msh2metis & visulization.ipynb
visualization/.ipynb_checkpoints/: msh2metis & visulization 3D-checkpoint.ipynb
visualization/examples/cube/: cube.mesh  cube.mesh.epart.8  cube.mesh.npart.8  cube.msh  cube0.vtk  cube1.vtk  cube2.vtk  cube3.vtk  cube4.vtk  cube5.vtk  cube6.vtk  cube7.vtk
visualization/examples/ell/: ell.mesh  ell.mesh.epart.4  ell.mesh.npart.4  ell.msh
visualization/examples/piece/: piece.mesh  piece.mesh.epart.4  piece.mesh.npart.4  piece0.vtk  piece1.vtk  piece2.vtk  piece3.vtk
visualization/examples/pripyrtet/: pripyrtet.mesh.epart.4  pripyrtet.mesh.npart.4  pripyrtet0.vtk  pripyrtet1.vtk  pripyrtet2.vtk  pripyrtet3.vtk
